Closed
Bug 614721
Opened 15 years ago
Closed 14 years ago
Remove some DirectDraw left overs
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
VERIFIED
FIXED
mozilla7
People
(Reporter: matjk7, Assigned: matjk7)
References
()
Details
(Whiteboard: [good first bug])
Attachments
(1 file, 2 obsolete files)
4.03 KB,
patch
|
matjk7
:
review+
mounir
:
checkin+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 6.1; rv:2.0b8pre) Gecko/20101124 Firefox/4.0b8pre
Build Identifier:
See bug 606990 comment 9.
Reproducible: Always
Comment 1•15 years ago
|
||
(In reply to comment #0)
> See bug 606990 comment 9.
{
Serge Gautherie (:sgautherie) 2010-11-24 15:05:59 PST
Indeed, it looks like a few more occurrences could be remove, see
http://mxr.mozilla.org/mozilla-central/search?string=DDRAW&case=1
"Found 14 matching lines in 6 files"
}
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: in-testsuite-
Whiteboard: [good first bug]
Version: unspecified → Trunk
Assignee | ||
Comment 2•15 years ago
|
||
Attachment #494259 -
Flags: review?(vladimir)
Comment 3•15 years ago
|
||
Comment on attachment 494259 [details] [diff] [review]
patch
>diff --git a/gfx/cairo/cairo/src/cairo-ddraw.h b/gfx/cairo/cairo/src/cairo-ddraw.h
I'm not sure that cairo files should be touched.
>diff --git a/gfx/cairo/d2d.patch b/gfx/cairo/d2d.patch
> @@ -2009,7 +2010,8 @@ typedef enum _cairo_surface_type {
>-+ CAIRO_SURFACE_TYPE_DDRAW,
Morevover, you can't modify a patch number of lines without updating its header.
Attachment #494259 -
Flags: feedback-
Assignee | ||
Comment 4•15 years ago
|
||
Serge's comments addressed.
Attachment #494259 -
Attachment is obsolete: true
Attachment #494316 -
Flags: review?(vladimir)
Attachment #494316 -
Flags: feedback?(sgautherie.bz)
Attachment #494259 -
Flags: review?(vladimir)
Comment 5•15 years ago
|
||
Comment on attachment 494316 [details] [diff] [review]
patch
(In reply to comment #3)
> >diff --git a/gfx/cairo/cairo/src/cairo-ddraw.h b/gfx/cairo/cairo/src/cairo-ddraw.h
>
> I'm not sure that cairo files should be touched.
This file may be a Mozilla file rather than a (imported) Cairo file actually,
so it might be fine to remove it.
In that case, you would need to "update"
http://mxr.mozilla.org/mozilla-central/search?string=cairo-ddraw.h&case=1&find=%2Fgfx%2Fcairo%2Fcairo%2Fsrc%2F
{
/gfx/cairo/cairo/src/Makefile.in
* line 170 -- EXPORTS_cairo += cairo-ddraw.h
}
too.
A reviewer will tell you...
Attachment #494316 -
Flags: feedback?(sgautherie.bz)
Assignee | ||
Updated•14 years ago
|
Attachment #494316 -
Flags: review?(vladimir) → review?(joe)
Comment 6•14 years ago
|
||
Comment on attachment 494316 [details] [diff] [review]
patch
Looks good. I'm not sure if we still need _STRETCH32/_STRETCH24, though. Jeff can look at this too.
Attachment #494316 -
Flags: review?(joe)
Attachment #494316 -
Flags: review?(jmuizelaar)
Attachment #494316 -
Flags: review+
Comment 7•14 years ago
|
||
I'd rather the cairo change wait for the cairo update.
Updated•14 years ago
|
Assignee: nobody → matjk7
Status: NEW → ASSIGNED
Comment 8•14 years ago
|
||
Comment on attachment 494316 [details] [diff] [review]
patch
This may need to be rebased, but the content is good.
Attachment #494316 -
Flags: review?(jmuizelaar) → review+
Assignee | ||
Comment 9•14 years ago
|
||
Updated to tip and added commit message.
Attachment #494316 -
Attachment is obsolete: true
Attachment #538170 -
Flags: review+
Attachment #538170 -
Flags: checkin?
Comment 10•14 years ago
|
||
Comment on attachment 538170 [details] [diff] [review]
patch for checkin
Pushed to inbound.
Attachment #538170 -
Flags: checkin? → checkin+
Updated•14 years ago
|
Whiteboard: [good first bug] → [good first bug][inbound[
Updated•14 years ago
|
Whiteboard: [good first bug][inbound[ → [good first bug][inbound]
Comment 11•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [good first bug][inbound] → [good first bug]
Target Milestone: --- → mozilla7
Comment 12•14 years ago
|
||
Verified the files
gfx/thebes/gfxWindowsPlatform.cpp
gfx/thebes/gfxWindowsPlatform.h
widget/src/windows/nsWindowGfx.cpp
were updated in mozilla-central repository.
Is this enough to verify the fix?
Thank you!
Assignee | ||
Updated•14 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•