Bug 614721 - Remove some DirectDraw left overs. r=joedrew,jrmuizel